--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
     <section id="Mywork">
-        <h1>I also love reading others stories.</h1>
+        <h1>I also love reading others stories as well.</h1>
         
         <div class="line"></div>
     </section> 
